apps/netflow/base/ingress/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflow-ingress
  namespace: netflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: netflow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
  - host: rabbitmq.netflow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-management
            port:
              number: 15672
